[project]
name = "be-arrived"
version = "0.1.0"
description = "BE FastAPI for Arrived Landing page"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "pydantic[email]",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-intercom>=4.0.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.5",
]
